shadcn ui integration in progress

--- a/src/index.css
+++ b/src/index.css
@@ -2,17 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
-@layer base {
+/* @layer base {
   html {
-    font-family: 'Expressway Rg', system-ui, sans-serif;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    min-height: 100vh;
-    background-color: rgb(40, 40, 40);
-    color: slategray;
+  for setting base styles at the root HTML
   }
-}
+} */
 
 /* remove these before we add tailwind & shadcn ui */
 
